Verion 0.9.43dev (?? ??? 2003)
  - Allow preferences to be set for nonuser cals (only nonuser admin will see)
  - Fixed bug 777524: Fixed preference issues with language.  Also
    fixed translation of "Public Access" into other languages.
  - When editing an event and changing the category, allow admin users to
    also change the category saved for the public user.
  - Fixed bug 772197: Oracle insert error for new reports
  - Fixed bug: printer-friendly link on report page lost user and
    offset info.
  - Updated palm & vcal import tools to support new repeat type (monthlyByDayR)
Verion 0.9.42 (21 Jul 2003)
  - Added admin options for nonuser calendars
  - Fixed bug 760236: Timezone Offset is buggy in edit_entry_handler.php
  - Added support for repeating events by weekday from end of month
    (as in Memorial Day, which is last Monday in May).
  - Fixed bug in repeating events by weekday.  Was incorrectly placing
    repeating events on wrong week if weekday in question is not
    contained in first week of month.  (Thanksgiving 2003, 4th Thursday,
    was showing up on Nov 20, not Nov 27.)
  - Modified view_entry.php to display better repeating info for
    monthlyByDay.
  - Added new publishing support.  Users can subscribe using the Calendar
    client from Mozilla or from Apple's iCal.  The URL would be
    http://your-calendar-url-here/publish.php/username.ics
    where 'username' would be the login of the calendar to subscribe to.
  - Added new custom report feature (requires two new database tables, see
    UPGRADING.html for details)
  - Added previous link to Activity Log page
  - Added patch 618254: new import function (vCal and Palm)
  - Added patch 759643: Added new view type "Month (on same calendar)"
    that displays all users' events on the same month view rather than
    separate table columns for each user.
  - Fixed bug: In tables-postgres.sql, table webcal_entry column cal_ext_for_id
    was NOT NULL when it should have been NULL.